--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 display: block;
             }
             #verses-container, #split-container {
-                margin-left: 250px; /* Shift right of sidebar */
-                width: calc(100% - 250px); /* Fill remaining space */
-                box-sizing: border-box; /* Include padding in width */
+                margin-left: 250px;
+                width: calc(100% - 250px);
+                box-sizing: border-box;
             }
         }
         #verses-container.hidden {
@@ -392,39 +392,37 @@
             console.log(`Book selected: ${bookSelect.value}`);
         });
 
-        async function fetchVerse(book, chapter, verse) {
-            const passage = `${book} ${chapter}:${verse}`;
-            console.log(`Fetching verse: ${passage}`);
+        async function fetchChapter(book, chapter) {
+            const passage = `${book} ${chapter}`;
+            console.log(`Fetching chapter: ${passage}`);
             try {
                 const response = await fetch(`${apiBase}?q=${encodeURIComponent(passage)}&include-verse-numbers=true`, {
                     headers: { 'Authorization': `Token ${apiKey}` }
                 });
                 const data = await response.json();
-                const text = data.passages[0] ? data.passages[0].replace(/<[^>]+>/g, '').trim() : 'Error loading verse.';
+                const text = data.passages[0] ? data.passages[0].replace(/<h2>.*<\/h2>/g, '').replace(/<div class="esv-text">|<\/div>/g, '') : 'Error loading chapter.';
                 console.log(`Fetched ${passage}: ${text.substring(0, 50)}...`);
                 return text;
             } catch (error) {
                 console.error('API Error:', error);
-                return 'Error loading verse.';
+                return 'Error loading chapter.';
             }
         }
 
-        async function loadChapter(book, chapter, verseCount) {
-            versesContainer.innerHTML = '';
-            for (let i = 1; i <= verseCount; i++) {
-                const text = await fetchVerse(book, chapter, i);
-                const verseEl = document.createElement('div');
-                verseEl.className = 'verse';
-                verseEl.dataset.verseNum = i;
-                verseEl.textContent = `${i}. ${text}`;
-                versesContainer.appendChild(verseEl);
-            }
+        async function loadChapter(book, chapter) {
+            const text = await fetchChapter(book, chapter);
+            versesContainer.innerHTML = text;
+            const verses = versesContainer.querySelectorAll('.p');
+            verses.forEach((verse, i) => {
+                verse.className = 'verse';
+                verse.dataset.verseNum = i + 1;
+            });
             addVerseClickListeners(versesContainer);
-            console.log(`Loaded ${book} ${chapter} with ${verseCount} verses`);
+            console.log(`Loaded ${book} ${chapter} with ${verses.length} verses`);
         }
 
         async function loadInitialChapter() {
-            await loadChapter('Genesis', 1, 31); // Genesis 1 has 31 verses
+            await loadChapter('Genesis', 1);
         }
         loadInitialChapter();
 
@@ -438,8 +436,7 @@
                 const book = books.find(b => b.abbr === bookSelect.value).name;
                 const chapter = chapterSelect.value;
                 currentChapter = `${book} ${chapter}`;
-                const verseCount = books.find(b => b.name === book).chapters >= chapter ? 31 : 1; // Simplified; adjust per chapter
-                await loadChapter(book, chapter, verseCount);
+                await loadChapter(book, chapter);
                 versesContainer.classList.remove('hidden');
                 splitContainer.style.display = 'none';
                 if (window.innerWidth <= 768) menu.classList.remove('active');
@@ -471,8 +468,8 @@
         function panToNode(node) {
             const nodeRect = node.getBoundingClientRect();
             const bottomRect = bottomHalf.getBoundingClientRect();
-            const scrollX = nodeRect.left - bottomRect.left + bottomHalf.scrollLeft - (bottomHalf.offsetWidth / 2) + 30;
-            const scrollY = nodeRect.top - bottomRect.top + bottomHalf.scrollTop - (bottomHalf.offsetHeight / 2) + 30;
+            const scrollX = nodeRect.left - bottomRect.left + bottomHalf.scrollLeft - 30; // Align left edge
+            const scrollY = nodeRect.top - bottomRect.top + bottomHalf.scrollTop - 30; // Align top edge
 
             bottomHalf.scrollTo({ left: scrollX, top: scrollY, behavior: 'smooth' });
             console.log(`Panning to node ${node.id} at x:${scrollX}, y:${scrollY}`);
@@ -482,13 +479,20 @@
             const node = Object.values(threadsData).flatMap(t => t.nodes).find(n => n.id === nodeId);
             const passage = node.passage;
             const [book, ref] = passage.split(' ');
-            const [chapter, verseNum] = ref.split(':');
+            const chapter = ref.split(':')[0];
+            const verseNum = ref.split(':')[1];
             currentChapter = `${book} ${chapter}`;
-            const text = await fetchVerse(book, chapter, verseNum);
-            verseContent.innerHTML = `<div class="verse" data-verse-num="${verseNum}">${verseNum}. ${text}</div>`;
-            const verseEl = verseContent.querySelector('.verse');
-            verseEl.classList.add('highlight');
-            verseEl.scrollIntoView({ behavior: 'smooth', block: 'center' });
+            const text = await fetchChapter(book, chapter);
+            verseContent.innerHTML = text;
+            const verses = verseContent.querySelectorAll('.p');
+            verses.forEach((verse, i) => {
+                verse.className = 'verse';
+                verse.dataset.verseNum = i + 1;
+                if (String(i + 1) === verseNum) {
+                    verse.classList.add('highlight');
+                    verse.scrollIntoView({ behavior: 'smooth', block: 'center' });
+                }
+            });
             backButton.style.display = 'block';
             addVerseClickListeners(verseContent);
             console.log(`Showing verse context for ${nodeId}: ${passage}`);
@@ -497,8 +501,7 @@
         async function restoreChapter() {
             if (currentChapter) {
                 const [book, chapter] = currentChapter.split(' ');
-                const verseCount = books.find(b => b.name === book).chapters >= chapter ? 31 : 1;
-                await loadChapter(book, chapter, verseCount);
+                await loadChapter(book, chapter);
                 verseContent.innerHTML = versesContainer.innerHTML;
                 backButton.style.display = 'none';
                 addVerseClickListeners(verseContent);
@@ -522,34 +525,28 @@
 
             threadTypes.forEach(threadType => {
                 const label = document.getElementById(`label-${threadType}`);
-                if (label) {
-                    label.classList.add('active');
-                    console.log(`Showing label for ${threadType}`);
-                }
+                if (label) label.classList.add('active');
 
                 const threadNodes = threadsData[threadType].nodes;
                 threadNodes.forEach(node => {
                     const el = document.getElementById(`${node.id}-${threadType}`);
                     if (activeNodes.has(`${node.id}-${threadType}`)) {
                         el.classList.add('active');
-                        console.log(`Activating node ${node.id}-${threadType}`);
                         const prompt = document.getElementById(`prompt-${node.id}-${threadType}`);
-                        if (prompt && node.id === nodeId && threadType === threadTypeClicked) {
-                            prompt.classList.add('active');
-                            console.log(`Showing prompt for ${node.id}-${threadType}`);
-                        }
+                        if (prompt && node.id === nodeId && threadType === threadTypeClicked) prompt.classList.add('active');
                     }
                 });
 
+                const activeNodeIds = Array.from(activeNodes).filter(id => id.endsWith(`-${threadType}`)).map(id => id.split('-')[0]);
                 threads.forEach(thread => {
                     const startNode = thread.dataset.startNode;
                     const endNode = thread.dataset.endNode;
-                    if (activeNodes.has(`${startNode}-${threadType}`) && activeNodes.has(`${endNode}-${threadType}`)) {
-                        thread.classList.add('active');
-                        console.log(`Activating thread ${thread.id}`);
+                    if (activeNodeIds.includes(startNode) && activeNodeIds.includes(endNode) && thread.classList.contains(threadType)) {
+                        drawThread(thread); // Redraw all eligible threads
                     }
                 });
             });
+            console.log(`Threads shown for ${nodeId}, type: ${threadTypeClicked}`);
         }
 
         function openBottom(nodeId, threadType) {
@@ -563,7 +560,6 @@
             if (!activeNodes.has(uniqueNodeId)) {
                 activeNodes.add(uniqueNodeId);
                 node.classList.add('active');
-                console.log(`Opened bottom for ${uniqueNodeId}`);
             }
 
             showThreads(nodeId, threadType);
@@ -579,6 +575,7 @@
                 const threadEl = document.getElementById(`thread-${threadType}-${index}`);
                 if (threadEl) drawThread(threadEl);
             }
+            console.log(`Opened bottom for ${uniqueNodeId}`);
         }
 
         function closeBottom() {
@@ -595,39 +592,27 @@
         function addVerseClickListeners(container) {
             const verses = container.querySelectorAll('.verse');
             console.log(`Adding listeners to ${verses.length} verses`);
-            verses.forEach((verse, index) => {
+            verses.forEach((verse) => {
                 verse.addEventListener('click', () => {
                     const verseNum = verse.dataset.verseNum;
                     console.log(`Verse ${verseNum} clicked: ${verse.textContent.substring(0, 30)}...`);
                     const matchingNodes = Object.values(threadsData).flatMap(t => t.nodes.map(n => ({ ...n, threadType: t }))).filter(n => {
                         const passageVerse = n.passage.split(':')[1];
-                        const matches = passageVerse === verseNum;
-                        console.log(`Checking ${n.passage} (verse ${passageVerse}) against verse ${verseNum}: ${matches}`);
-                        return matches;
+                        return passageVerse === verseNum;
                     });
                     console.log(`Found ${matchingNodes.length} matching nodes for verse ${verseNum}`);
                     if (matchingNodes.length > 0) {
-                        matchingNodes.forEach(node => {
-                            const threadType = node.threadType.label.toLowerCase();
-                            const uniqueNodeId = `${node.id}-${threadType}`;
-                            console.log(`Processing node ${uniqueNodeId} for thread ${threadType}`);
-                            if (!activeNodes.has(uniqueNodeId)) {
-                                activeNodes.add(uniqueNodeId);
-                                const nodeEl = document.getElementById(uniqueNodeId);
-                                if (nodeEl) {
-                                    nodeEl.classList.add('active');
-                                    console.log(`Activated ${uniqueNodeId} at x:${nodeEl.style.left}, y:${nodeEl.style.top}`);
-                                } else {
-                                    console.error(`Node ${uniqueNodeId} not found in DOM`);
-                                }
-                            } else {
-                                console.log(`${uniqueNodeId} already active`);
-                            }
-                            showThreads(node.id, threadType);
-                            const nodeEl = document.getElementById(uniqueNodeId);
-                            if (nodeEl) panToNode(nodeEl);
-                        });
-                        showVerseContext(matchingNodes[0].id);
+                        const firstNode = matchingNodes[0];
+                        const threadType = firstNode.threadType.label.toLowerCase();
+                        const uniqueNodeId = `${firstNode.id}-${threadType}`;
+                        const nodeEl = document.getElementById(uniqueNodeId);
+                        if (!activeNodes.has(uniqueNodeId)) {
+                            activeNodes.add(uniqueNodeId);
+                            nodeEl.classList.add('active');
+                        }
+                        showThreads(firstNode.id, threadType);
+                        panToNode(nodeEl);
+                        showVerseContext(firstNode.id);
                         versesContainer.classList.add('hidden');
                         splitContainer.style.display = 'flex';
                         bottomHalf.classList.remove('hidden');
@@ -659,15 +644,11 @@
                 if (!activeNodes.has(uniqueNodeId)) {
                     activeNodes.add(uniqueNodeId);
                     node.classList.add('active');
-                    console.log(`Activated ${uniqueNodeId}`);
                 }
 
                 document.querySelectorAll('.prompt').forEach(p => p.classList.remove('active'));
                 const prompt = document.getElementById(`prompt-${nodeId}-${threadType}`);
-                if (prompt) {
-                    prompt.classList.add('active');
-                    console.log(`Showing prompt for ${uniqueNodeId}`);
-                }
+                if (prompt) prompt.classList.add('active');
 
                 panToNode(node);
                 showVerseContext(nodeId);
@@ -678,7 +659,6 @@
                     document.getElementById(nextNodeId).classList.add('active');
                     const threadEl = document.getElementById(`thread-${threadType}-${nodeIndex}`);
                     if (threadEl) drawThread(threadEl);
-                    console.log(`Progressed to ${nextNodeId}`);
                 }
 
                 showThreads(nodeId, threadType);
